--- a/src/app/happening/happening-page/happening-page.component.scss
+++ b/src/app/happening/happening-page/happening-page.component.scss
@@ -20,7 +20,6 @@
 
     .bg-bubbles__image {
       background-image: url('src/assets/bubbles.png');
-      backface-visibility: hidden;
       width: 100%;
       height: 112px;
 
