--- a/src/app/participation-happening/participation-happening/participation-happening-page.component.scss
+++ b/src/app/participation-happening/participation-happening/participation-happening-page.component.scss
@@ -142,7 +142,7 @@
       background-position: center top;
       background-image: url('src/assets/bubbles.png');
       background-color: color-base('red');
-      backface-visibility: hidden;
+
 
       @include respond-above('medium') {
       }
